finishing json implementation and styled.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--<aside class="side-bar"></aside>> --> 
         
         <div class="content">
-            <h1 class="title">Moto Presents</h1>
+            <h1 class="title">feedBuzz <br><span>for</span> you </h1>
             <h2 class="quiz-title">What type of motorcycle are you?</h2>
             <div class="question-container" id="container"> 
                     <div class="question-card" id="Q1"></div>
